# duopus

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  Dockerfile.nginx  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish-ghcr.yml
backend/: .dockerignore  Dockerfile  alembic.ini  auth.py  beat_utils.py  config.py  database.py  deps.py  duopus.db  entrypoint.sh  main.py  models.py  permissions.py  pyproject.toml  requirements.txt  schemas.py  seed.py  story_lock.py  user_db.py  user_manager.py  user_schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 20240511_000001_initial.py  20240512_000002_story_rundown_position_unique.py  20260512_000003_story_cue.py
backend/routers/: auth_routes.py  prompter.py  rundown_ops.py  rundowns.py  scripts.py  stories.py  templates.py  users.py  vmix.py
backend/services/: __init__.py  autogen.py  generate.py  rundown_engine.py  vmix_bridge.py
backend/tests/: test_phase1.py  test_rundown_engine.py  test_vmix_bridge.py
backend/ws/: hub.py
companion-module/: package.json
companion-module/companion/: manifest.json
companion-module/src/: index.js
docs/: PHASE1.md
frontend/prompter/: index.html  package-lock.json  package.json  vite.config.ts
frontend/prompter/src/: App.tsx  styles.css
frontend/rundown-ui/: index.html  package-lock.json  package.json  vite.config.ts
frontend/rundown-ui/src/: App.tsx  AppLayout.tsx  RequireAuth.tsx  api.ts  styles.css  types.ts  useAuth.ts
frontend/rundown-ui/src/components/: BeatStrip.tsx
nginx/: nginx.conf
(+5 files in other folders)
