[project]
name = "duopus-backend"
version = "0.1.0"
description = "Duopus NRCS FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "fastapi-users>=14.0.0",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
